--- a/war/MainPage.html
+++ b/war/MainPage.html
@@ -8,7 +8,7 @@
       #map-canvas { height: 100% }
     </style>
     <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCMvIgvyT2vnyhbkuaS-fAhYS5fXZ9ouNg&sensor=true">
+      src="https://maps.googleapis.com/maps/api/js?key=yourOwnKey&sensor=true">
     </script>
     <script type="text/javascript">
       var geocoder;
